--- a/02-pokemon-static/src/pages/index.astro
+++ b/02-pokemon-static/src/pages/index.astro
@@ -1,7 +1,25 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
+import type { PokemonListResponse } from "../interfaces/pokemon-list.response";
+import PokemonCard from "../components/pokemons/PokemonCard.astro";
+
+const resp = await fetch("https://pokeapi.co/api/v2/pokemon");
+
+const data = (await resp.json()) as PokemonListResponse;
 ---
 
 <MainLayout title="Pokemon Static | Home">
-	<h1 class="text-3xl">Astro</h1>
+	<h1 class="text-3xl">Pokemon List</h1>
+	<hr />
+
+	<section
+		aria-label="Pokemons list"
+		class="grid grid-cols-1 sm:grid-cols-4 md:grid-cols-5 gap-4 mt-5"
+	>
+		{
+			data.results.map((pokemon) => (
+				<PokemonCard name={pokemon.name} url={pokemon.url} />
+			))
+		}
+	</section>
 </MainLayout>
