--- a/02-pokemon-static/src/components/pokemons/PokemonCard.astro
+++ b/02-pokemon-static/src/components/pokemons/PokemonCard.astro
@@ -12,8 +12,9 @@ const id = url.split("/").at(-2);
 const imageUrl = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/${id}.png`;
 ---
 
+<!-- href={`/pokemons/${name}`} -->
 <a
-  href={`/pokemons/${name}`}
+  href={`/pokemon/${id}`}
   class:list={[
     `rounded flex flex-col justify-center items-center p-2`,
     { border: !isBig },
@@ -27,7 +28,11 @@ const imageUrl = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprit
   />
   <span
     transition:name={`${name}-text`}
-    class:list={["capitalize", { "text-2xl text-blue-300": isBig }]}
+    class:list={[
+      "capitalize",
+      { "text-2xl text-blue-300": isBig },
+      { "text-sm": !isBig },
+    ]}
   >
     #{id}
     {name}
