--- a/02-pokemon-static/src/pages/pokemon/[id].astro
+++ b/02-pokemon-static/src/pages/pokemon/[id].astro
@@ -1,23 +1,21 @@
 ---
 import type { GetStaticPaths } from "astro";
+import type { PokemonListResponse } from "../../interfaces/pokemon-list.response";
 import MainLayout from "../../layouts/MainLayout.astro";
 import PokemonCard from "../../components/pokemons/PokemonCard.astro";
-import type { PokemonListResponse } from "../../interfaces/pokemon-list.response";
 
 export const getStaticPaths = (async () => {
   const resp = await fetch("https://pokeapi.co/api/v2/pokemon?limit=151");
   const { results } = (await resp.json()) as PokemonListResponse;
 
   return results.map(({ name, url }) => ({
-    params: { name },
+    params: { id: url.split("/").at(-2) },
     props: { name, url },
   }));
 }) satisfies GetStaticPaths;
 
-const { name } = Astro.params;
-const { url } = Astro.props;
-
-const id = url.split("/").at(-2);
+const { id } = Astro.params;
+const { url, name } = Astro.props;
 
 const audioSrc = `https://raw.githubusercontent.com/PokeAPI/cries/main/cries/pokemon/latest/${id}.ogg`;
 ---
