--- a/02-pokemon-static/src/components/pokemons/PokemonCard.astro
+++ b/02-pokemon-static/src/components/pokemons/PokemonCard.astro
@@ -12,9 +12,9 @@ const id = url.split("/").at(-2);
 const imageUrl = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/${id}.png`;
 ---
 
-<!-- href={`/pokemons/${name}`} -->
+<!-- href={`/pokemon/${id}`} -->
 <a
-  href={`/pokemon/${id}`}
+  href={`/pokemons/${name}`}
   class:list={[
     `rounded flex flex-col justify-center items-center p-2`,
     { border: !isBig },
