--- a/02-pokemon-static/src/layouts/MainLayout.astro
+++ b/02-pokemon-static/src/layouts/MainLayout.astro
@@ -1,11 +1,20 @@
 ---
-import { ViewTransitions } from "astro:transitions";
+// import { ViewTransitions } from "astro:transitions";
+import { siteInfo } from "src/constants/site-info";
 
 interface Props {
-  title: string;
+  title?: string;
+  image?: string;
+  description?: string;
 }
 
-const { title } = Astro.props;
+const {
+  title = siteInfo.title,
+  description = siteInfo.description,
+  image,
+} = Astro.props;
+
+console.log(image);
 ---
 
 <html lang="en">
@@ -14,9 +23,24 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+
+    <!-- SEO -->
+    <meta name="description" content={description} />
+    <meta name="author" content={siteInfo.author} />
+
+    <!-- OG Metatags -->
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content={description} />
+    <meta property="og:image" content={image} />
+
     <title>{title}</title>
 
-    <ViewTransitions />
+    <!-- <ViewTransitions /> -->
+    <style>
+      @view-transition {
+        navigation: auto;
+      }
+    </style>
   </head>
   <body class="bg-slate-800 text-slate-100 m-auto max-w-3xl">
     <main class="mt-10">
