end half section 4

--- a/02-pokemon-static/src/layouts/MainLayout.astro
+++ b/02-pokemon-static/src/layouts/MainLayout.astro
@@ -1,6 +1,7 @@
 ---
 // import { ViewTransitions } from "astro:transitions";
 import { siteInfo } from "src/constants/site-info";
+import NavBar from "@components/shared/NavBar.astro";
 
 interface Props {
   title?: string;
@@ -13,8 +14,6 @@ const {
   description = siteInfo.description,
   image,
 } = Astro.props;
-
-console.log(image);
 ---
 
 <html lang="en">
@@ -42,8 +41,10 @@ console.log(image);
       }
     </style>
   </head>
-  <body class="bg-slate-800 text-slate-100 m-auto max-w-3xl">
-    <main class="mt-10">
+  <body class="bg-slate-800 text-slate-100">
+    <NavBar />
+
+    <main class="mt-10 mx-auto flex-grow w-full max-w-4xl px-4">
       <slot />
     </main>
   </body>
