--- a/02-pokemon-static/src/pages/index.astro
+++ b/02-pokemon-static/src/pages/index.astro
@@ -2,6 +2,7 @@
 import MainLayout from "@layouts/MainLayout.astro";
 import type { PokemonListResponse } from "@interfaces/pokemon-list.response";
 import PokemonCard from "@components/pokemons/PokemonCard.astro";
+import Title from "@components/shared/Title.astro";
 
 const resp = await fetch("https://pokeapi.co/api/v2/pokemon");
 
@@ -9,12 +10,11 @@ const data = (await resp.json()) as PokemonListResponse;
 ---
 
 <MainLayout title="Pokemon Static | Home">
-	<h1 class="text-3xl">Pokemon List</h1>
-	<hr />
+	<Title>Pokemon List</Title>
 
 	<section
 		aria-label="Pokemons list"
-		class="grid grid-cols-1 sm:grid-cols-4 md:grid-cols-5 gap-4 mt-5"
+		class="grid grid-cols-2 sm:grid-cols-4 md:grid-cols-5 gap-4 mt-5"
 	>
 		{
 			data.results.map((pokemon) => (
