--- a/02-pokemon-static/src/pages/pokemons/[page].astro
+++ b/02-pokemon-static/src/pages/pokemons/[page].astro
@@ -3,6 +3,7 @@ import type { GetStaticPaths } from "astro";
 import MainLayout from "@layouts/MainLayout.astro";
 import type { PokemonListResponse } from "@interfaces/pokemon-list.response";
 import PokemonCard from "@components/pokemons/PokemonCard.astro";
+import Title from "@components/shared/Title.astro";
 
 export const getStaticPaths = (async ({ paginate }) => {
 	const resp = await fetch("https://pokeapi.co/api/v2/pokemon?limit=151");
@@ -17,12 +18,11 @@ console.log(page);
 ---
 
 <MainLayout title="Pokemon Static | Home">
-	<h1 class="text-3xl">Pokemon List</h1>
-	<hr />
+	<Title>Pokemon List Paginated</Title>
 
 	<section
 		aria-label="Pokemons list"
-		class="grid grid-cols-1 sm:grid-cols-4 md:grid-cols-5 gap-4 mt-5"
+		class="grid grid-cols-2 sm:grid-cols-4 md:grid-cols-5 gap-4 mt-5"
 	>
 		{
 			page.data.map((pokemon) => (
