--- a/02-pokemon-static/src/components/shared/NavBar.astro
+++ b/02-pokemon-static/src/components/shared/NavBar.astro
@@ -3,6 +3,8 @@ const links = [
   { name: "List", href: "/" },
   { name: "Paginated", href: "/pokemons/1" },
   { name: "Favorites", href: "/favorites" },
+  { name: "Islands", href: "/islands" },
+  { name: "Demo", href: "/demo" },
 ];
 
 const currentPath = Astro.url.pathname;
