--- a/02-pokemon-static/src/pages/index.astro
+++ b/02-pokemon-static/src/pages/index.astro
@@ -9,7 +9,7 @@ const resp = await fetch("https://pokeapi.co/api/v2/pokemon");
 const data = (await resp.json()) as PokemonListResponse;
 ---
 
-<MainLayout title="Pokemon Static | Home">
+<MainLayout title="Pokemon Static | List">
 	<Title>Pokemon List</Title>
 
 	<section
