--- a/02-pokemon-static/src/pages/pokemon/[id].astro
+++ b/02-pokemon-static/src/pages/pokemon/[id].astro
@@ -22,7 +22,7 @@ const imageUrl = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprit
 ---
 
 <MainLayout
-  title={`${name} - #${id} | Pokelist`}
+  title={`Pokemon Static | ${name} - #${id} | Pokelist`}
   image={imageUrl}
   description={`Check out ${name} from the Pokelist!`}
 >
