--- a/02-pokemon-static/src/pages/favorites/index.astro
+++ b/02-pokemon-static/src/pages/favorites/index.astro
@@ -1,8 +1,15 @@
 ---
 import Title from "@components/shared/Title.astro";
 import MainLayout from "@layouts/MainLayout.astro";
+
+import { FavoritePokemons } from "@components/pokemons/FavoritePokemons";
 ---
 
-<MainLayout title="Favorites" description="Your favorite Pokémon">
-  <Title>Pokemon List</Title>
+<MainLayout
+  title="Pokemon Static | Favorites"
+  description="Your favorite Pokémon"
+>
+  <Title>Favorites</Title>
+
+  <FavoritePokemons client:only="solid-js" />
 </MainLayout>
