--- a/02-pokemon-static/src/pages/pokemons/[page].astro
+++ b/02-pokemon-static/src/pages/pokemons/[page].astro
@@ -17,7 +17,7 @@ const { page } = Astro.props;
 console.log(page);
 ---
 
-<MainLayout title="Pokemon Static | Home">
+<MainLayout title="Pokemon Static | Paginated">
 	<Title>Pokemon List Paginated</Title>
 
 	<section
