--- a/03-blog/src/components/BlogPost.astro
+++ b/03-blog/src/components/BlogPost.astro
@@ -8,6 +8,7 @@ const { frontmatter, url } = Astro.props;
     class="object-cover w-full h-56 rounded-lg lg:w-64"
     src={frontmatter.image}
     alt={frontmatter.title}
+    transition:name={`${frontmatter.slug}-image`}
   />
 
   <div class="flex flex-col justify-between py-6 lg:mx-6">
