--- a/03-blog/src/pages/blog-file-system.astro
+++ b/03-blog/src/pages/blog-file-system.astro
@@ -1,10 +1,8 @@
 ---
-import { getCollection } from "astro:content";
 import BlogPost from "../components/BlogPost.astro";
 import MainLayout from "../layouts/MainLayout.astro";
-import TypedBlogPost from "src/components/TypedBlogPost.astro";
 
-const blogPosts = await getCollection("blog");
+const posts = await Astro.glob("./posts-old/*.{md,mdx}");
 ---
 
 <MainLayout title="Deveser's blog">
@@ -14,11 +12,11 @@ const blogPosts = await getCollection("blog");
 			<h1
 				class="text-3xl font-semibold text-gray-800 capitalize lg:text-4xl dark:text-white"
 			>
-				Deveser's blog
+				From the blog
 			</h1>
 
 			<div class="grid grid-cols-1 gap-8 mt-8 md:mt-16 md:grid-cols-2">
-				{blogPosts.map((post) => <TypedBlogPost post={post} />)}
+				{posts.map((post) => <BlogPost {...post} />)}
 			</div>
 		</div>
 	</section>
