--- a/03-blog/src/components/TypedBlogPost.astro
+++ b/03-blog/src/components/TypedBlogPost.astro
@@ -22,7 +22,7 @@ const { post } = Astro.props;
     transition:name={`${post.slug}-image`}
   />
 
-  <div class="flex flex-col justify-between py-6 lg:mx-6">
+  <div class="flex flex-col justify-between py-1 lg:mx-5 h-full">
     <a
       href={`/posts/${post.slug}`}
       class="text-xl font-semibold text-gray-800 hover:underline dark:text-white"
@@ -30,8 +30,8 @@ const { post } = Astro.props;
       {post.data.description}
     </a>
 
-    <span class="text-sm text-gray-500 dark:text-gray-300"
-      >{Formatter.formatDate(post.data.date)}</span
-    >
+    <span class="text-sm text-gray-500 dark:text-gray-300 self-end">
+      {Formatter.formatDate(post.data.date)}
+    </span>
   </div>
 </div>
