--- a/03-blog/src/layouts/MainLayout.astro
+++ b/03-blog/src/layouts/MainLayout.astro
@@ -8,7 +8,7 @@ interface Props {
 const { title } = Astro.props;
 ---
 
-<html lang="en">
+<html lang="en" class="h-screen">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -17,8 +17,8 @@ const { title } = Astro.props;
     <title>{title}</title>
     <ViewTransitions />
   </head>
-  <body class="bg-gray-900">
-    <main class="mb-10 max-w-5xl m-auto px-2 py-2">
+  <body class="bg-gray-900 h-full">
+    <main class="mb-10 max-w-5xl m-auto px-5 py-2 h-full">
       <slot />
     </main>
   </body>
