--- a/03-blog/src/pages/index.astro
+++ b/03-blog/src/pages/index.astro
@@ -3,19 +3,25 @@ import { getCollection } from "astro:content";
 import BlogPost from "../components/BlogPost.astro";
 import MainLayout from "../layouts/MainLayout.astro";
 import TypedBlogPost from "src/components/TypedBlogPost.astro";
+import { siteConfig } from "src/config/site-config";
 
-const blogPosts = await getCollection("blog");
+const blogPosts = await getCollection(
+	"blog",
+	(post) => post.data.isDraft === false,
+);
 ---
 
-<MainLayout title="Deveser's blog">
-	<!-- component -->
+<MainLayout title={siteConfig.title}>
 	<section class="bg-white dark:bg-gray-900">
 		<div class="container px-6 py-10 mx-auto">
 			<h1
 				class="text-3xl font-semibold text-gray-800 capitalize lg:text-4xl dark:text-white"
 			>
-				Deveser's blog
+				{siteConfig.title}
 			</h1>
+
+			<a href="/blog/1" class="mr-5">Paginated Blog</a>
+			<a href="/authors">Authors</a>
 
 			<div class="grid grid-cols-1 gap-8 mt-8 md:mt-16 md:grid-cols-2">
 				{blogPosts.map((post) => <TypedBlogPost post={post} />)}
@@ -23,3 +29,9 @@ const blogPosts = await getCollection("blog");
 		</div>
 	</section>
 </MainLayout>
+
+<style>
+	a {
+		@apply text-blue-500 hover:underline;
+	}
+</style>
