--- a/03-blog/src/pages/posts/[slug].astro
+++ b/03-blog/src/pages/posts/[slug].astro
@@ -1,6 +1,8 @@
 ---
+import { Formatter } from "@utils/formatter";
 import type { GetStaticPaths } from "astro";
 import { Image } from "astro:assets";
+import { getEntry } from "astro:content";
 import { getCollection } from "astro:content";
 import BlogLayout from "src/layouts/BlogLayout.astro";
 
@@ -15,18 +17,41 @@ export const getStaticPaths = (async () => {
 
 const { post } = Astro.props;
 const { Content, headings } = await post.render();
+
+const author = await getEntry("author", post.data.author.id);
+
+console.log(author);
 ---
 
 <BlogLayout title={post.data.title}>
-  <h1 class="text-xs text-gray-500 mb-0">{post.data.title}</h1>
-  <h4 class="text-md text-gray-400 mb-0">{post.data.author}</h4>
+  <h1 class="text-xl text-gray-500 mb-0">{post.data.title}</h1>
+
+  <a href="/" class="text-blue-500 hover:underline">Back</a>
+
+  <div class="text-sm text-gray-400 flex mt-2 mb-3">
+    <Image
+      src={author.data.avatar}
+      alt={author.data.name}
+      width={50}
+      height={50}
+      class="rounded-full"
+      transition:name={`${author.id}-avatar`}
+    />
+
+    <div class="flex flex-col ml-5">
+      <a href={`/blog/${post.data.author.id}`}>{author.data.name}</a>
+      <span class="text-xs text-gray-200"
+        >{Formatter.formatDate(post.data.date)}</span
+      >
+    </div>
+  </div>
 
   <Image
     src={post.data.image}
     alt={post.data.title}
     width={500}
     height={220}
-    class="object-cover w-full h-[350px] rounded-md"
+    class="object-cover w-full h-[350px] rounded-md post-image"
     transition:name={`${post.slug}-image`}
   />
 
@@ -49,7 +74,7 @@ const { Content, headings } = await post.render();
 >
 
 <style>
-  img {
+  .post-image {
     margin: 0 auto;
   }
 </style>
